# PiSense

./: .gitignore  README.md  pyproject.toml  requirements.txt
models/cardboard-box/: README.dataset.txt  README.roboflow.txt  data.yaml
models/cardboard-box/test/labels/: 05a82b4668fcfbb8_jpg.rf.eeb5b2576be6015ec1d498e0400ef429.txt  065465ff370a60b0_jpg.rf.d72457fa0a46ee46252a88fce09a7987.txt  0_jpg.rf.aec6f66bd36e69a5328aae4ba241ed90.txt  0c9c9ebe5c9aff0b_jpg.rf.d6d2f4d7eb1a99a357ed548b14084e2d.txt  10-jpg__jpg_jpg.rf.be0d32d36e2833f9cd762a33c8d41fb9.txt  100_jpg.rf.02f829a5fc0d1a867a018ad7949fb77f.txt  101-jpg__jpg-jpganti-clockwise_jpg.rf.0c0b2c5fbce860f9cafb53028bef257a.txt  107-jpg__jpg_jpg.rf.b1e653663eb03424356af780aac2935e.txt  10_jpg.rf.ae8a8158e6fb97b1fc039e91bb9480dd.txt  11-jpg__jpg_jpg.rf.2976e47c69d48a7b3178fe096da37524.txt  11-jpg__jpg_jpg.rf.344a918e78e72e2815359b561a47b2c2.txt  111_jpg.rf.723a89fb25b75bc2bbe61277a35b26fd.txt  114_jpg.rf.37b4a067d148c29af941bc13923fe5da.txt  120-png__jpg_jpg.rf.3e515c3cd4f65f0e6b655b158c0b7955.txt  129-webp__jpg-jpganti-clockwise_jpg.rf.fa7ef55656f9985182693de1961f0ff8.txt  12_jpg.rf.f47ceac7c8cb5a8e352f5c365f964e19.txt  13_jpg.rf.25cadf8f05d0f0934de04d08da6bbd9f.txt  14-webp__jpg_jpg.rf.adbc3257f1cf8e97162f15a37153ad6a.txt  14_jpg.rf.0ed9f4d4a01f87a0936142e568718b11.txt  159-jpg__jpg_jpg.rf.2df8d2d3b6f19495afe483b17a63cd84.txt  17_jpg.rf.08a8ea4021fd9da8d28f204768ecf5da.txt  (+188 more)
src/: __init__.py  analyze_video.py  download_model.py  extract_frames.py  gui.py  main.py  train_model.py
tests/: __init__.py  test_main.py
(+6707 files in other folders)
